# tailored-ephemeris

./: Cargo.toml  README.md  package.json
.claude/: settings.local.json
pkg/: README.md  package.json  tailored_ephemeris.d.ts  tailored_ephemeris.js  tailored_ephemeris_bg.js  tailored_ephemeris_bg.wasm  tailored_ephemeris_bg.wasm.d.ts
src/: astrology.rs  houses.rs  julian.rs  lib.rs  planets.rs  wasm.rs
tests/: accuracy_test.rs  eclipse_test.rs  heliocentric_test.rs  houses_validation_test.rs  multi_era_test.rs
