[package]
name = "tailored-ephemeris"
version = "0.1.0"
edition = "2021"
description = "Minimal astronomical ephemeris calculations for horoscope generation"
repository = "https://github.com/recallfx/tailored-ephemeris"
keywords = ["ephemeris", "astrology", "wasm", "horoscope", "astronomy"]
categories = ["science", "wasm"]
license = "GPL-3.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "serde", "serde_json", "serde-wasm-bindgen"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = "s"
lto = true
